@@ -184,7 +184,19 @@ quat<T> slerp(T t, const quat<T>& q0, const quat<T>& q1, bool shortest=true)
     ca = -ca;
     neg_q1 = true;
   }
-  o = acos(ca);
+
+  if (ca>=1.0)
+  {
+      o = 0.0;
+  }
+  else if (ca<=-1.0)
+  {
+      o = M_PI;
+  }
+  else
+  {
+      o = acos(ca);
+  }
   so = sin(o);
 
   if (xabs(so)<vec3<T>::epsilon)
