@@ -16,6 +16,8 @@ New features:
 
 Bug fixes/enhancements:
 
+- cgtypes: Bugfix: slerp() could produce NaNs when the magnitude of the input
+  quats were slightly larger than 1 (bug #3377718).
 - cgtypes: In the light version of cgkit, the quat.fromMat() method was
   broken. The regular version was not affected by this.
 - ODEDynamics: Objects can now be removed from the simulation. An object that
